--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,29 @@
 </head>
 <body>
     <h1>Lasagna Recipe</h1>
-
+    <img src="../images/lasagna.jpg" alt="Lasagna">
+    <h2>World's Best Lasagna</h2>
+    <p>This recipe will have your family running home for dinner.</p>
+    <h3>Ingredients</h3>
+        <ul>
+            <li>Meat</li>
+            <li>Onion and garlic</li>
+            <li>Tomato products</li>
+            <li>Sugar</li>
+            <li>Spices and seasonings</li>
+            <li>Lasagna noodles</li>
+            <li>Cheeses</li>
+            <li>Egg</li>
+        </ul>
+    <h3>Steps</h3>
+        <ol>
+            <li>Make the meat sauce.</li>
+            <li>Cook the noodles.</li>
+            <li>Make the ricotta mixture.</li>
+            <li>Layer the lasagna according to the recipe instructions.</li>
+            <li>Cover with foil and bake.</li>
+            <li>Let the lasagna rest before serving.</li>
+        </ol>
     <a href="../index.html">Home</a>
 </body>
 </html>
