Add teriyaki chicken recipe

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <a href="./recipes/lasagna.html">Lasagna</a>
+        <a href="./recipes/bakedpotatosoup.html">Baked Potato Soup</a>
+        <a href="./recipes/teriyakichicken.html">Teriyaki Chicken</a>
+    </ul>
 </body>
 </html>
