--- a/recipes/teriyakichicken.html
+++ b/recipes/teriyakichicken.html
@@ -3,32 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes: Lasagna</title>
+    <title>Odin Recipes: Teriyaki Chicken</title>
 </head>
 <body>
-    <h1>Lasagna Recipe</h1>
-    <img src="../images/lasagna.jpg" alt="Lasagna">
-    <h2>World's Best Lasagna</h2>
-    <p>This recipe will have your family running home for dinner.</p>
+    <h1>Teriyaki Chicken</h1>
+    <img src="../images/teriyakichicken.jpg" alt="Lasagna">
+    <h2>Baked Teriyaki Chicken</h2>
+    <p>This recipe will have your family screaming for more!</p>
     <h3>Ingredients</h3>
         <ul>
-            <li>Meat</li>
-            <li>Onion and garlic</li>
-            <li>Tomato products</li>
+            <li>Chicken</li>
+            <li>Soy Sauce</li>
             <li>Sugar</li>
-            <li>Spices and seasonings</li>
-            <li>Lasagna noodles</li>
-            <li>Cheeses</li>
-            <li>Egg</li>
+            <li>Vinegar</li>
+            <li>Cornstarch and cold water</li>
+            <li>Minced garlic</li>
+            <li>Seasonings</li>
         </ul>
     <h3>Steps</h3>
         <ol>
-            <li>Make the meat sauce.</li>
-            <li>Cook the noodles.</li>
-            <li>Make the ricotta mixture.</li>
-            <li>Layer the lasagna according to the recipe instructions.</li>
-            <li>Cover with foil and bake.</li>
-            <li>Let the lasagna rest before serving.</li>
+            <li>Set aside chicken.</li>
+            <li>Combine rest of ingredients in a small saucepan over low heat.</li>
+            <li>Place chicken in baking dish.</li>
+            <li>Brush both side with the sauce.</li>
+            <li>Bake in preheated oven for 30 minutes.</li>
+            <li>Flip chicken and brush with sauce every 10 minutes until no longer pink and juices run clear.</li>
+            <li>Serve hot and enjoy!</li>
         </ol>
     <a href="../index.html">Home</a>
 </body>
