--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <a href="./recipes/lasagna.html">Lasagna</a>
-        <a href="./recipes/bakedpotatosoup.html">Baked Potato Soup</a>
-        <a href="./recipes/teriyakichicken.html">Teriyaki Chicken</a>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/bakedpotatosoup.html">Baked Potato Soup</a></li>
+        <li><a href="./recipes/teriyakichicken.html">Teriyaki Chicken</a></li>
     </ul>
 </body>
 </html>
